# tasks

./: README.md  config.json.example  config.py  notify.py  pyproject.toml  server.py  tasks.json.example  tasks.py  test_server.py
.github/workflows/: flake8.yml
templates/: task_debug.tpl  task_done.tpl  task_list.tpl  task_not_found.tpl  task_not_found_pending.tpl  task_show.tpl  task_show_done.tpl  task_show_no_vetoes.tpl  task_show_pending.tpl  task_show_vetoed.tpl  task_veto.tpl  task_veto_fail.tpl  task_vouchers.tpl  tasks_help.tpl
