[project]
name = "tasks"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Axel Hoffmann", email = "xlf_github@schwabing.org"},
]
dependencies = ["markdown-it-py", "qrcode", "pillow"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
lint = ["black", "flake8"]
test = ["pytest", "requests", "beautifulsoup4", "pytest-cov", "coverage"]

[tool.pdm]
distribution = false

[tool.coverage.run]
source = ["server", "tasks", "config", "notify"]
omit = ["test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"
